syntax = "proto3";

option java_package = "com.doctoror.commons.wear";

message PlaybackState {
  int32 state = 1;
  int64 progress = 2;
  int64 duration = 3;
}

message Media {
  int32 playlistPosition = 1;
  string title = 2;
  int64 duration = 3;
  string artist = 4;
  string album = 5;
  int64 progress = 6;
}

message Playlist {
  repeated Media media = 2;
}
